--- a/3.jQuery-Class-Selector/index.html
+++ b/3.jQuery-Class-Selector/index.html
@@ -15,7 +15,7 @@
     </script>
 </head>
 <body>
-    <h2 class="head">This is a heading</h2>
+    <h2 class="head">Welcome to jQuery</h2>
 
     <p class="para1">This is a paragraph 1</p>
     <p class="para2">This is a paragraph 2</p>
