Add exercise files

--- a/4.jQuery-Other-Selectors/index.html
+++ b/4.jQuery-Other-Selectors/index.html
@@ -9,7 +9,7 @@
     <script>
         $(document).ready(function () {
             $("button").click(function () {
-                $("this").hide();
+                $(this).hide();
             });
         });
 
@@ -52,7 +52,7 @@
     </script>
 </head>
 <body>
-    <h2 class="head">This is a heading</h2>
+    <h2 class="head">Welcome to jQuery</h2>
 
     <p class="para1">This is a paragraph 1</p>
     <p class="para2">This is a paragraph 2</p>
