Refactor typo in comment

--- a/16.jQuery-Slide-Up/index.html
+++ b/16.jQuery-Slide-Up/index.html
@@ -9,7 +9,7 @@
 
     <script>
         $(document).ready(function () {
-            // Slide down the div
+            // Slide up the div
             $("#topBar").click(function () {
                 $("#panel").slideUp("1000");
             });
